service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8-ingress
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app: abhi-raj
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
