ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: ingress-nginx 
spec:
  ingressClassName: nginx
  rules:
  - host: abhiapp.com
    http: 
      paths:
        - path: /abhi
          pathType: Prefix
          backend:
            service:
              name: k8-ingress
              port:
                number: 80
